[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Room7.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Sprites/Room7/1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Sprites/Room7/4.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Sprites/Room7/3.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Sprites/Room7/2.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Room7_1.tres" type="SpriteFrames" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 102.346, 39.4457 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.9258, 119.436 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40.125, 46.296 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 19.9929, 20.0197 )

[node name="Node2D" type="Node2D"]
position = Vector2( 670, 326 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 73, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 1060, -111 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="FallRoomSpr1" type="Sprite" parent="Area2D/CollisionShape2D"]
position = Vector2( 300.383, -144 )
texture = ExtResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 73, 0 )
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -582.747, 94 )
shape = SubResource( 3 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 73, 0 )
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 1496.5, -207 )
shape = SubResource( 4 )

[node name="Area2D4" type="Area2D" parent="."]
position = Vector2( 73, 0 )
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 300.383, -99 )
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 373.383, -144 )
polygon = PoolVector2Array( 1198.62, -40, 880.617, -40, 880.617, 42, 758.617, 42, 758.617, -40, 562.617, -40, 562.617, 40, 161.13, 39.822, 161.13, 75.3349, 154.993, 81.2242, -155.046, 81.224, -162.462, 73.3674, -162.532, 1.243, -396.495, 1.24297, -402.748, -5.95407, -403.455, -79.9302, -1116.55, -79.93, -1116.5, 157, -925.5, 157, -916.5, 166, -916.5, 239, -1199.5, 239, -1199.5, -239, 1199.5, -239 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 373.007, -144.974 )
polygon = PoolVector2Array( 1199.5, 239, -842.5, 239, -842.5, 166, -833.5, 157, -403.5, 157, -403.5, 86, -394.5, 77, -247.007, 76.9742, -237.007, 86.9742, -237.5, 157, 237.5, 157, 237.5, 126, 246.5, 117, 638.993, 118.974, 638.993, 38.9742, 680.993, 38.9742, 680.993, 118.974, 958.993, 120.974, 958.993, 38.9742, 1200.99, 38.9742 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -17.0
margin_top = -14.0
margin_right = 971.0
margin_bottom = 558.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
anims/FadeOut = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 873, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 873, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 873, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 873, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 913, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
position = Vector2( 913, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite7" type="AnimatedSprite" parent="."]
position = Vector2( 913, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite8" type="AnimatedSprite" parent="."]
position = Vector2( 913, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite9" type="AnimatedSprite" parent="."]
position = Vector2( 953, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite10" type="AnimatedSprite" parent="."]
position = Vector2( 953, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite11" type="AnimatedSprite" parent="."]
position = Vector2( 953, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite12" type="AnimatedSprite" parent="."]
position = Vector2( 953, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite13" type="AnimatedSprite" parent="."]
position = Vector2( 993, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite14" type="AnimatedSprite" parent="."]
position = Vector2( 993, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite15" type="AnimatedSprite" parent="."]
position = Vector2( 993, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite16" type="AnimatedSprite" parent="."]
position = Vector2( 993, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite17" type="AnimatedSprite" parent="."]
position = Vector2( 1033, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite18" type="AnimatedSprite" parent="."]
position = Vector2( 1033, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite19" type="AnimatedSprite" parent="."]
position = Vector2( 1033, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite20" type="AnimatedSprite" parent="."]
position = Vector2( 1033, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite21" type="AnimatedSprite" parent="."]
position = Vector2( 1073, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite22" type="AnimatedSprite" parent="."]
position = Vector2( 1073, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite23" type="AnimatedSprite" parent="."]
position = Vector2( 1073, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite24" type="AnimatedSprite" parent="."]
position = Vector2( 1073, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite25" type="AnimatedSprite" parent="."]
position = Vector2( 1113, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite26" type="AnimatedSprite" parent="."]
position = Vector2( 1113, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite27" type="AnimatedSprite" parent="."]
position = Vector2( 1113, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite28" type="AnimatedSprite" parent="."]
position = Vector2( 1113, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite29" type="AnimatedSprite" parent="."]
position = Vector2( 1153, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite30" type="AnimatedSprite" parent="."]
position = Vector2( 1153, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite31" type="AnimatedSprite" parent="."]
position = Vector2( 1153, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite32" type="AnimatedSprite" parent="."]
position = Vector2( 1153, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite33" type="AnimatedSprite" parent="."]
position = Vector2( 1193, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite34" type="AnimatedSprite" parent="."]
position = Vector2( 1193, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite35" type="AnimatedSprite" parent="."]
position = Vector2( 1193, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite36" type="AnimatedSprite" parent="."]
position = Vector2( 1193, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite37" type="AnimatedSprite" parent="."]
position = Vector2( 1233, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite38" type="AnimatedSprite" parent="."]
position = Vector2( 1233, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite39" type="AnimatedSprite" parent="."]
position = Vector2( 1233, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite40" type="AnimatedSprite" parent="."]
position = Vector2( 1233, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite41" type="AnimatedSprite" parent="."]
position = Vector2( 1273, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite42" type="AnimatedSprite" parent="."]
position = Vector2( 1273, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite43" type="AnimatedSprite" parent="."]
position = Vector2( 1273, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite44" type="AnimatedSprite" parent="."]
position = Vector2( 1273, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite45" type="AnimatedSprite" parent="."]
position = Vector2( 1313, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite46" type="AnimatedSprite" parent="."]
position = Vector2( 1313, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite47" type="AnimatedSprite" parent="."]
position = Vector2( 1313, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite48" type="AnimatedSprite" parent="."]
position = Vector2( 1313, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite49" type="AnimatedSprite" parent="."]
position = Vector2( 1353, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite50" type="AnimatedSprite" parent="."]
position = Vector2( 1353, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite51" type="AnimatedSprite" parent="."]
position = Vector2( 1353, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite52" type="AnimatedSprite" parent="."]
position = Vector2( 1353, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite53" type="AnimatedSprite" parent="."]
position = Vector2( 1393, -164 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite54" type="AnimatedSprite" parent="."]
position = Vector2( 1393, -124 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite55" type="AnimatedSprite" parent="."]
position = Vector2( 1393, -84 )
frames = ExtResource( 6 )
animation = "1"

[node name="AnimatedSprite56" type="AnimatedSprite" parent="."]
position = Vector2( 1393, -44 )
frames = ExtResource( 6 )
animation = "1"

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Area2D" parent="Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/3"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="4" type="Area2D" parent="Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/4"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="7" type="Area2D" parent="Control"]
position = Vector2( 40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/7"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="8" type="Area2D" parent="Control"]
position = Vector2( 40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/8"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="9" type="Area2D" parent="Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/9"]
position = Vector2( 953, -164 )
shape = SubResource( 7 )

[node name="10" type="Area2D" parent="Control"]
position = Vector2( 80, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/10"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[node name="11" type="Area2D" parent="Control"]
position = Vector2( 80, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/11"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="12" type="Area2D" parent="Control"]
position = Vector2( 80, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/12"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="13" type="Area2D" parent="Control"]
position = Vector2( 80, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/13"]
position = Vector2( 913, -164 )
shape = SubResource( 7 )

[node name="14" type="Area2D" parent="Control"]
position = Vector2( 120, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/14"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[node name="15" type="Area2D" parent="Control"]
position = Vector2( 120, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/15"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="16" type="Area2D" parent="Control"]
position = Vector2( 120, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/16"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="17" type="Area2D" parent="Control"]
position = Vector2( 160, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/17"]
position = Vector2( 873, -164 )
shape = SubResource( 7 )

[node name="18" type="Area2D" parent="Control"]
position = Vector2( 160, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/18"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[node name="21" type="Area2D" parent="Control"]
position = Vector2( 160, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/21"]
position = Vector2( 913, -164 )
shape = SubResource( 7 )

[node name="22" type="Area2D" parent="Control"]
position = Vector2( 200, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/22"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[node name="23" type="Area2D" parent="Control"]
position = Vector2( 200, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/23"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="24" type="Area2D" parent="Control"]
position = Vector2( 200, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/24"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="25" type="Area2D" parent="Control"]
position = Vector2( 160, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/25"]
position = Vector2( 953, -164 )
shape = SubResource( 7 )

[node name="26" type="Area2D" parent="Control"]
position = Vector2( 240, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/26"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[node name="27" type="Area2D" parent="Control"]
position = Vector2( 240, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/27"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="28" type="Area2D" parent="Control"]
position = Vector2( 240, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/28"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="31" type="Area2D" parent="Control"]
position = Vector2( 280, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/31"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="32" type="Area2D" parent="Control"]
position = Vector2( 280, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/32"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="35" type="Area2D" parent="Control"]
position = Vector2( 320, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/35"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="36" type="Area2D" parent="Control"]
position = Vector2( 320, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/36"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="39" type="Area2D" parent="Control"]
position = Vector2( 360, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/39"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="40" type="Area2D" parent="Control"]
position = Vector2( 360, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/40"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="41" type="Area2D" parent="Control"]
position = Vector2( 400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/41"]
position = Vector2( 873, -164 )
shape = SubResource( 7 )

[node name="42" type="Area2D" parent="Control"]
position = Vector2( 400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/42"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[node name="43" type="Area2D" parent="Control"]
position = Vector2( 400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/43"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="44" type="Area2D" parent="Control"]
position = Vector2( 400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/44"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="45" type="Area2D" parent="Control"]
position = Vector2( 400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/45"]
position = Vector2( 913, -164 )
shape = SubResource( 7 )

[node name="46" type="Area2D" parent="Control"]
position = Vector2( 440, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/46"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[node name="47" type="Area2D" parent="Control"]
position = Vector2( 440, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/47"]
position = Vector2( 873, -84 )
shape = SubResource( 7 )

[node name="48" type="Area2D" parent="Control"]
position = Vector2( 440, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/48"]
position = Vector2( 873, -44 )
shape = SubResource( 7 )

[node name="49" type="Area2D" parent="Control"]
position = Vector2( 400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/49"]
position = Vector2( 953, -164 )
shape = SubResource( 7 )

[node name="50" type="Area2D" parent="Control"]
position = Vector2( 480, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/50"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[node name="53" type="Area2D" parent="Control"]
position = Vector2( 480, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/53"]
position = Vector2( 913, -164 )
shape = SubResource( 7 )

[node name="54" type="Area2D" parent="Control"]
position = Vector2( 520, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/54"]
position = Vector2( 873, -124 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="CanvasLayer/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
